# code

./: .report.swp  .study.swp  classes  diet  pack.txt  paleo  prj  readme.txt  report  study  tmp  travel  weight
bible/: freq  (+12 more)
toys/algolib/: CMakeLists.txt
toys/algolib/src/: exec.cpp  slist.cpp  slist.h
toys/algolib/test/: algolib_test.cpp
toys/apps/: CMakeLists.txt
toys/apps/apis/: template.h
toys/apps/apis/hanson/: atom.h  test_atom.c  test_stk.c
toys/apps/apis/reddy/: hello.cpp
toys/apps/common/curl-7.50.3/: curl-config  libcurl.pc  libtool
toys/apps/common/curl-7.50.3/docs/: Makefile
toys/apps/common/curl-7.50.3/docs/examples/: Makefile
toys/apps/common/curl-7.50.3/docs/libcurl/opts/: Makefile
toys/apps/common/curl-7.50.3/lib/: Makefile
toys/apps/common/curl-7.50.3/lib/.deps/: libcurl_la-amigaos.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-content_encoding.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-dict.Plo  libcurl_la-easy.Plo  libcurl_la-escape.Plo  libcurl_la-formdata.Plo  libcurl_la-gopher.Plo  libcurl_la-hostasyn.Plo  libcurl_la-hostcheck.Plo  libcurl_la-http_proxy.Plo  libcurl_la-if2ip.Plo  libcurl_la-krb5.Plo  libcurl_la-ldap.Plo  libcurl_la-md4.Plo  libcurl_la-md5.Plo  libcurl_la-netrc.Plo  libcurl_la-non-ascii.Plo  libcurl_la-nonblock.Plo  libcurl_la-rtsp.Plo  libcurl_la-select.Plo  libcurl_la-sendf.Plo  libcurl_la-slist.Plo  libcurl_la-smb.Plo  libcurl_la-speedcheck.Plo  libcurl_la-strequal.Plo  libcurl_la-strtok.Plo  libcurl_la-system_win32.Plo  libcurl_la-tftp.Plo  libcurl_la-timeval.Plo  libcurl_la-transfer.Plo
toys/apps/common/curl-7.50.3/src/: Makefile
toys/apps/common/curl-7.50.3/tests/: Makefile
toys/apps/common/curl-7.50.3/tests/certs/scripts/: Makefile
toys/apps/common/curl-7.50.3/tests/data/: Makefile
toys/apps/common/jsmn/: file.json  jsontest.c
toys/apps/curlapp/: config.xml
toys/apps/grepper/src/: grepper.cpp
toys/apps/jsonapp/: CMakeLists.txt  README.md
toys/apps/jsonapp/src/: jsonapp.cpp
toys/apps/sqlapp/: CMakeLists.txt
toys/apps/sqlapp/bins/: sqlite3-static.lib
toys/apps/sqlapp/src/: orm.cpp
toys/apps/xmlapp/src/: xmlapp.cpp
toys/cmake/: CMakeLists.txt  notes  solution.cpp  test.cpp
toys/embed/simple/: CMakeLists.txt  snuff.cpp
toys/grokkage/: .fifi.c.swp  CMakeLists.txt  Task.c  adt.c  adt.h  arrays.c  authenticate.c  bits.c  btree.c  cli.c  cmd.c  con.pl  console.c  console.pl  db.c  embed.c  fifo.c  fifo.h  fifo2.c  fifo2.h  geogrid.c  graph.c  graph2.c  grid.c  grid.h  groklib.h.in  hash.c  heap.c  infix.code  interp.c  jmptbl.c  knap.c  linalg.c  linalg.h  linterp.c  list.c  mxheap.c  notes  numbers  osi.c  (+27 more)
toys/grokkage/converge/: fifo.c  ring.c  scratch  test.c
toys/grokkage/cpp/: CMakeLists.txt  basics.cpp  graph.cpp  libs.cpp  lock_free_queue.cpp  numeric.cpp  pid2.cpp  tq.cpp
toys/grokkage/grok.v2/: binsea.exs
toys/grokkage/kiss/: a.out  adt.h  arrays.c  bits.c  btree.c  cheats  db.c  graph.c  graph.cpp  greed.cc  grid.c  grid.h  hash.c  heap.c  intervals.c  list.c  list.cpp  minos.c  mxheap.c  notes  pearls.awk  pearls.c  pearls.cc  practice  readme.txt  ring.inc  rpn.c  rpn.pl  scratch.c  sedgewick.cc  set.c  set_client.c  sieve.c  state.c  suffix.c  topsort.c  tree.c  trie.c  trie.cpp  types.cpp  (+2 more)
toys/grokkage/kiss++/: graph.cpp  graph2.cpp  graph3.cpp  heap.cpp  list.cpp  numeric.cpp  queue.cpp  sandbox.cpp  set.hpp  stl.cpp  stl2.cpp  tears.cpp  test.cpp  tq.cpp  trie.cpp  types.hpp
toys/grokkage/kiss.py/: yplan
toys/grokkage/kiss.v2/: list.h  test.c
toys/grokkage/kiss/kiss/kiss/: main.cpp
toys/grokkage/kiss/kiss/kiss.xcodeproj/: project.pbxproj
toys/grokkage/kiss/kiss/kiss.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
toys/grokkage/kiss/trollster/: arrays.cpp  list.cpp  parallel.cpp  pch.h  types.hpp
toys/grokkage/osi/: osi.c
toys/grokkage/puma/: main.c  puma.c  puma.h  util.c  util.h
toys/grokkage/puma/antlr/: ArrayInit.g4  ArrayInitTest.java  CSV.g4  LibExpr.g4  ShortToUnicodeString.java  clean.bat  read.me
toys/grokkage/puma/zip/tiger/chap2/: lextest
toys/grokkage/scratch/: arrays.c  btree.c  graph.c  list.c  notes  tree.c  types.h
toys/grokkage/sim/: CMakeLists.txt  Makefile  bus.c  bus.h  dev.c  dev.h  dsim.cc  hal.h  ifs.c  ios.c  ios.h  notes  shell.cc  sim.c  sim.cc  sim.h  state2.c  traffic.v  traffic_tb.v
toys/grokkage/sledge/: .depend  bld.cmd  main.cc  myapp  out  sedgewick.cc  sedgewick.h  tape_sort.cc
toys/grokkage/stm/: hal_gpio_driver.h  lab2.uvguix.bartb  lab2.uvoptx  lab2.uvprojx  main.c  periph.c
toys/grokkage/stm/Lab_src_code/lecture_45/src/: .main.c.swp
toys/grokkage/stm/Listings/: lab2.map  startup_stm32f411xe.lst
toys/grokkage/stm/Objects/: lab2.axf  lab2.build_log.htm  lab2.htm  lab2.lnp  lab2_Target 1.dep  main.crf  main.d  periph.d  stack_op.d  system_stm32f4xx.crf  system_stm32f4xx.d
toys/grokkage/stm/drivers/src/I2C/Objects/: i2c_master.build_log.htm  i2c_master.htm  led.d
toys/grokkage/stm/drivers/src/SPI/: spi.uvprojx
toys/grokkage/trees/: btree.c  config  prjs  triex.c
toys/grokkage/weiss/: clist.c  clist.h  connecreg.c  display.c  display.h  in2postfix.c  lispi.c  list.c  list.h  poly.c
toys/misc/ti/zasm0/zasm-0.0a/: Makefile.in  config.h.in  configure  configure.ac  zasm
toys/misc/ti/zasm0/zasm-0.0a/assembler/: Makefile.in  assembler.c  assembler.h  intel_hex.c  label.c  opcode.c  pattern.c  string.c  z80.c  z80.opcodes
toys/misc/ti/zasm0/zasm-0.0a/converter/: Makefile.in  appsign.copying  appsign.h  converter.c  debug.c  debug.h
toys/misc/ti/zasm0/zasm-0.0a/doc/: gpl.texi  zasm.info  zasm.texinfo
toys/misc/ti/zasm0/zasm-0.0a/preprocessor/: Makefile.in  alloc.c  cores.c  expr.c  macros.c  options.c  path.c  pattern.c  preprocessor.c  preprocessor.h  string.c  token.c
toys/tinyxml/: CMakeLists.txt  README.md
toys/tinyxml/prj/: README.md  XmlApp.sln  XmlTest.sln
toys/tinyxml/prj/XmlApp/: XmlApp.cpp  XmlApp.vcxproj
toys/tinyxml/prj/XmlTest/: .XmlTest.cpp.swp  .XmlTest.vcxproj.swp  XmlTest.cpp  XmlTest.vcproj  XmlTest.vcxproj  XmlTest.vcxproj.filters
(+5573 files in other folders)
